--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -2,8 +2,8 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <i class="fas fa-key fa-6x"></i>
-    <h1 class="display-3">You've Discovered My Secret!</h1>
+    <i class="fas fa-user-secret fa-6x"></i>
+    <h1 class="display-4 myStyle">You've Discovered My Secret!</h1>
 
     <%usersWithSecrets.forEach((user)=>{%>
       <p class="secret-text"><%=user.secret%></p>
